# GitConflictPilot

./: .gitignore  README.md  README_EN.md  README_TW.md  pyproject.toml  requirements.txt
gitconflictpilot/: __init__.py  analyzer.py  backup.py  cli.py  detector.py  history.py  resolver.py  tui.py
tests/: test_gitconflictpilot.py
