[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitconflictpilot"
version = "1.0.0"
description = "🔧 GitConflictPilot - Lightweight Terminal Git Conflict Intelligent Resolution Engine | 轻量级终端Git冲突智能解决引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GitConflictPilot Team", email = "gitconflictpilot@example.com"}
]
keywords = [
    "git",
    "conflict",
    "resolution",
    "merge",
    "cli",
    "terminal",
    "developer-tools",
    "zero-dependency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

[project.scripts]
gitconflictpilot = "gitconflictpilot.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/GitConflictPilot"
Documentation = "https://github.com/gitstq/GitConflictPilot#readme"
Repository = "https://github.com/gitstq/GitConflictPilot"
Issues = "https://github.com/gitstq/GitConflictPilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitconflictpilot*"]

[tool.setuptools.package-data]
gitconflictpilot = ["py.typed"]
